agents/codex/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupted_turn_clears_visible_running_hook.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"before interrupt:\\n{before_interrupt}after interrupt:\\n{}\",\nactive_hook_blob(&chat))"
---
before interrupt:
• Running PreToolUse hook: checking command policy
after interrupt:
<empty>